OW-1 updated application form

--- a/apply.html
+++ b/apply.html
@@ -20,8 +20,8 @@
 
     <!--     Fonts and icons     -->
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="assets/css/nucleo-icons.css" rel="stylesheet" />
 
     <!-- Smooth Scroll -->
@@ -67,22 +67,22 @@
                         <a href="./apply.html" class="nav-link"><i></i> Join Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://facebook.com/MACRoboMaster"
-                            target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom"
+                            href="https://facebook.com/MACRoboMaster" target="_blank">
                             <i class="fab fa-facebook-square"></i>
                             <p class="d-lg-none">Facebook</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://instagram.com/macrobomaster"
-                            target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom"
+                            href="https://instagram.com/macrobomaster" target="_blank">
                             <i class="fab fa-instagram"></i>
                             <p class="d-lg-none">Instagram</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/company/mac-robomaster"
-                            target="_blank">
+                        <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom"
+                            href="https://www.linkedin.com/company/mac-robomaster" target="_blank">
                             <i class="fab fa-linkedin"></i>
                             <p class="d-lg-none">LinkedIn</p>
                         </a>
@@ -130,34 +130,41 @@
 
             <style>
                 body {
-                background: #333;
-                } 
+                    background: #333;
+                }
+
                 .video-container {
-                position: relative;
+                    position: relative;
                 }
+
                 video {
-                height: 100%;
-                vertical-align: middle;
-                width: 100%;
-                filter:brightness(50%);
+                    height: 100%;
+                    vertical-align: middle;
+                    width: 100%;
+                    filter: brightness(50%);
                 }
-                .overlay-desc {                
-                position: absolute;
-                top: 0; right: 0; bottom: 0; left: 0;
-                display: flex;
-                align-items: center;
-                justify-content: center;
+
+                .overlay-desc {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
+
                 h1 {
-                color: white;
+                    color: white;
                     font-size: 5vmax;
-                text-align: center;
-                
+                    text-align: center;
+
                 }
 
                 main {
-                margin: 0 auto;
-                width: 80%;
+                    margin: 0 auto;
+                    width: 80%;
                 }
             </style>
             <!-- Video Cover -->
@@ -173,21 +180,24 @@
         <!-- Main -->
         <div class="main">
 
-        <!-- Join Us -->
-        <div id="join" class="section section-dark text-center container-fluid" style="background-image: url('assets/img/background.jpg')">
+            <!-- Join Us -->
+            <div id="join" class="section section-dark text-center container-fluid"
+                style="background-image: url('assets/img/background.jpg')">
 
-            <div class="container animatable fadeInUp">
-                <div class="row">
-                    <div class="col-md-8 ml-auto mr-auto">
-                        <h1 class="title">Join Our Team</h1>
-                        <h5 id="test" class="description animated">We take pride in the development of everyone on the
-                            team. The experience and skills that people develop in all areas is better than anything
-                            that could be achieved at a similar age in the workplace. Our team is a challenge in
-                            engineering, business, and project management; we are always looking for new members to
-                            expand our team in a diverse range of faculties from engineering to business. Come to our
-                            recruitment sessions or just reach out if you are interested in what we do.
-                        </h5>
-                        <!-- <h1 class="title">Become our operators</h1>
+                <div class="container animatable fadeInUp">
+                    <div class="row">
+                        <div class="col-md-8 ml-auto mr-auto">
+                            <h1 class="title">Join Our Team</h1>
+                            <h5 id="test" class="description animated">We take pride in the development of everyone on
+                                the
+                                team. The experience and skills that people develop in all areas is better than anything
+                                that could be achieved at a similar age in the workplace. Our team is a challenge in
+                                engineering, business, and project management; we are always looking for new members to
+                                expand our team in a diverse range of faculties from engineering to business. Come to
+                                our
+                                recruitment sessions or just reach out if you are interested in what we do.
+                            </h5>
+                            <!-- <h1 class="title">Become our operators</h1>
                         <h5 id="test" class="description animated">Interested in FPS games and RC racing? Do you fly
                             drones and FPV? Are you an experienced Marauder on the esports battlefield? Here's your
                             chance! We are recruiting robot operators to represent our team to attend the RoboMaster
@@ -195,23 +205,32 @@
                             Part of the travel expense will be reimbursed! 
                         </h5> -->
 
-                        <h4 id="test" class="description animated" style="color: white">
-                            If you are interested in this amazing oppotunity, feel free to come!
-                        </h4>
-                        <br>
-                        <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
-                    </div>
-                    <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://forms.gle/JUEgjrhdYf6NjDda6'"
-                            type="button">Apply Now</button>
-                    </div>
-                    <!-- <div class="col-md-12 ml-auto mr-auto">
+                            <h4 id="test" class="description animated" style="color: white">
+                                If you are interested in this amazing oppotunity, feel free to come!
+                            </h4>
+                            <br>
+                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
+                        </div>
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <button class="btn btn-danger btn-lg btn-fill"
+                                onclick="location.href='https://forms.gle/JUEgjrhdYf6NjDda6'" type="button">Apply
+                                Now</button>
+                        </div>
+                        <!-- <div class="col-md-12 ml-auto mr-auto">
                         <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
                             type="button">Apply Now</button>
                     </div> -->
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12 ml-auto mr-auto">
+                            <script src="assets/js/google-form-styler.js"
+                                form="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">
+                                </script>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
 
         </div>
 
@@ -223,17 +242,19 @@
                     <nav class="footer-nav">
                         <ul>
                             <li>
-                                <a class="nav-link" href="https://instagram.com/macrobomaster" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a class="nav-link" href="https://instagram.com/macrobomaster" target="_blank"><i
+                                        class="fab fa-instagram"></i></a>
                             </li>
                             <li>
-                                <a class="nav-link" href="https://facebook.com/MACRoboMaster" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                                <a class="nav-link" href="https://facebook.com/MACRoboMaster" target="_blank"><i
+                                        class="fab fa-facebook-square"></i></a>
                             </li>
                             <li>
                                 <a class="nav-link" href="" target="_blank"><i class="fab fa-youtube"></i></a>
                             </li>
                             <li>
-                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster" target="_blank"><i
-                                        class="fab fa-linkedin"></i></a>
+                                <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
+                                    target="_blank"><i class="fab fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </nav>
@@ -284,8 +305,8 @@
 <script src="assets/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
 <script src="assets/js/popper.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBayJJXo_yGLVyvHH6TYOj7yqUvX6ozClQ&callback=initMap"
-    async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBayJJXo_yGLVyvHH6TYOj7yqUvX6ozClQ&callback=initMap" async
+    defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -309,6 +330,7 @@
 
 <!-- animate -->
 <script src="assets/js/animate.js"></script>
+
 
 
 
