DEV-1 fixed routing

--- a/apply.html
+++ b/apply.html
@@ -55,13 +55,13 @@
                         <a href="#projects" class="nav-link"><i></i> Projects</a>
                     </li> -->
                     <li class="nav-item">
-                        <a href="#team" class="nav-link"><i></i> Team</a>
+                        <a href="./index.html/" class="nav-link"><i></i> Team</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#sponsors" class="nav-link"><i></i> Sponsors</a>
+                        <a href="./index.html/" class="nav-link"><i></i> Sponsors</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link"><i></i> Contact</a>
+                        <a href="./index.html" class="nav-link"><i></i> Contact</a>
                     </li>
                     <li class="nav-item">
                         <a href="./apply.html" class="nav-link"><i></i> Join Us</a>
