--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/bingchen-ji-947093135/"><img
+                                    <a href="https://www.linkedin.com/in/bingchen-ji-947093135/" target="_blank"><img
                                             src="./assets/img/faces/jbc.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -379,7 +379,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/haoran-liu/"><img
+                                    <a href="https://www.linkedin.com/in/haoran-liu/ target="_blank""><img
                                             src="./assets/img/faces/haoran4.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -398,7 +398,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/jarvis-wang/"><img
+                                    <a href="https://www.linkedin.com/in/jarvis-wang/" target="_blank"><img
                                             src="./assets/img/faces/jarvis.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -435,7 +435,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/chengxin-liu/"><img
+                                    <a href="https://www.linkedin.com/in/chengxin-liu/" target="_blank"><img
                                             src="./assets/img/faces/leo.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -454,7 +454,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/tonyangz/"><img
+                                    <a href="https://www.linkedin.com/in/tonyangz/" target="_blank"><img
                                             src="./assets/img/faces/tony.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -473,7 +473,7 @@
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/"><img
+                                    <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/" target="_blank"><img
                                             src="./assets/img/faces/james.jpeg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -492,7 +492,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/rudy-liu-a40072136/"><img
+                                    <a href="https://www.linkedin.com/in/rudy-liu-a40072136/" target="_blank"><img
                                             src="./assets/img/faces/rudy.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -511,7 +511,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/raghibq/"><img
+                                    <a href="https://www.linkedin.com/in/raghibq/" target="_blank"><img
                                             src="./assets/img/faces/raghib.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -688,7 +688,7 @@
                         <br />
                         <br />
                         <button class="btn btn-danger btn-lg btn-fill"
-                            onclick="location.href='./assets/files/MacRM_Sponsor_Package.pdf'" type="button">Sponsor
+                            onclick="location.href='./assets/files/MacRM_Sponsor_Package.pdf'" target="_blank" type="button">Sponsor
                             Package</button>
                     </div>
                 </div>
@@ -990,7 +990,7 @@
                     </nav>
                     <div class="credits ml-auto">
                         <span class="copyright">
-                            &copy; 2018 MAC RoboMaster. All rights reserved.
+                            &copy; 2019 MAC RoboMaster. All rights reserved.
                         </span>
                     </div>
                 </div>
