--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/haoran-liu/ target="_blank""><img
+                                    <a href="https://www.linkedin.com/in/haoran-liu/" target="_blank"><img
                                             src="./assets/img/faces/haoran4.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
@@ -687,9 +687,9 @@
                         <br />
                         <br />
                         <br />
-                        <button class="btn btn-danger btn-lg btn-fill"
-                            onclick="location.href='./assets/files/MacRM_Sponsor_Package.pdf'" target="_blank" type="button">Sponsor
-                            Package</button>
+						<a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
+                        <input class="btn btn-danger btn-lg btn-fill" type="button">Sponsor Package</input>
+						</a>
                     </div>
                 </div>
             </div>
