--- a/index.html
+++ b/index.html
@@ -908,9 +908,9 @@
                         <br />
                     </div>
                     <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill"
-                            onclick="location.href='./assets/files/MacRM_Sponsor_Package.pdf'" type="button">Sponsor
-                            Package</button>
+                        <a href="./assets/files/MacRM_Sponsor_Package.pdf" target="_blank">
+							<input class="btn btn-danger btn-lg btn-fill" type="button" value="Sponsor Package" />
+						</a>
                     </div>
 
 
