DEV-9 deleted operator application section

--- a/index.html
+++ b/index.html
@@ -921,20 +921,20 @@
 
 
         <!-- Join Us -->
-        <div id="join" class="section section-dark text-center container-fluid"
+        <!-- <div id="join" class="section section-dark text-center container-fluid"
             style="background-image: url('assets/img/background.jpg')">
 
             <div class="container animatable fadeInUp">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <!-- <h1 class="title">Join Our Team</h1>
+                        <h1 class="title">Join Our Team</h1>
                         <h5 id="test" class="description animated">We take pride in the development of everyone on the
                             team. The experience and skills that people develop in all areas is better than anything
                             that could be achieved at a similar age in the workplace. Our team is a challenge in
                             engineering, business, and project management; we are always looking for new members to
                             expand our team in a diverse range of faculties from engineering to business. Come to our
                             recruitment sessions or just reach out if you are interested in what we do.
-                        </h5> -->
+                        </h5>
                         <h1 class="title">Become our operators</h1>
                         <h5 id="test" class="description animated">Interested in FPS games and RC racing? Do you fly
                             drones and FPV? Are you an experienced Marauder on the esports battlefield? Here's your
@@ -946,21 +946,17 @@
                         <h4 id="test" class="description animated" style="color: white">
                             If you are interested in this amazing oppotunity, feel free to come!
                         </h4>
-                        <br>
+                        <br> -->
                         <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
-                    </div>
+                    <!-- </div>
                     <div class="col-md-12 ml-auto mr-auto">
                         <button class="btn btn-danger btn-lg btn-fill"
                             onclick="location.href='https://forms.gle/JUEgjrhdYf6NjDda6'" type="button">Apply
                             Now</button>
                     </div>
-                    <!-- <div class="col-md-12 ml-auto mr-auto">
-                        <button class="btn btn-danger btn-lg btn-fill" onclick="location.href='https://goo.gl/forms/BddLTtGix7bhx8P02'"
-                            type="button">Apply Now</button>
-                    </div> -->
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
