--- a/apply.html
+++ b/apply.html
@@ -170,9 +170,10 @@
 
                     <div class="row">
                         <div class="col-md-12 ml-auto mr-auto">
-                            <script src="assets/js/google-form-styler.js"
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true" width="640" height="1186" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            <!-- <script src="assets/js/google-form-styler.js"
                                 form="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">
-                                </script>
+                                </script>-->
                         </div>
                     </div>
                 </div>
