--- a/apply.html
+++ b/apply.html
@@ -169,8 +169,8 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-12 ml-auto mr-auto">
-							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true" width="640" height="1186" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        <div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">Loading…</iframe>
                             <!-- <script src="assets/js/google-form-styler.js"
                                 form="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">
                                 </script>-->
