--- a/apply.html
+++ b/apply.html
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="embed-responsive embed-responsive-16by9">
+                        <div class="embed-responsive">
 							<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">Loading…</iframe>
                             <!-- <script src="assets/js/google-form-styler.js"
                                 form="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">
