--- a/apply.html
+++ b/apply.html
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="embed-responsive">
+                        <div class="embed-responsive embed-responsive-10by19">
 							<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">Loading…</iframe>
                             <!-- <script src="assets/js/google-form-styler.js"
                                 form="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">
@@ -260,7 +260,11 @@
 
 <!-- Switches -->
 <script src="assets/js/bootstrap-switch.min.js"></script>
-
+<script>
+.embed-responsive-10by19 {
+   padding-top: 190%;
+}
+</script>
 <!--  Plugins for Slider -->
 <script src="assets/js/nouislider.js"></script>
 
