DEV-14 closed application

--- a/apply.html
+++ b/apply.html
@@ -159,7 +159,7 @@
                                 If you are interested in this amazing oppotunity, feel free to come!
                             </h4>
                             <br>
-                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a> -->
+                            <a href="#paper-kit" class="btn btn-danger btn-round">Application Closed</a>
                         </div>
 
                         <!-- <div class="col-md-12 ml-auto mr-auto">
@@ -168,14 +168,14 @@
                     </div> -->
                     </div>
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="embed-responsive embed-responsive-10by19">
 							<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">Loading…</iframe>
-                            <!-- <script src="assets/js/google-form-styler.js"
+                            <script src="assets/js/google-form-styler.js"
                                 form="https://docs.google.com/forms/d/e/1FAIpQLSc5wTlw3o6wFToiT-kdTRHyqhSV3u7NHtu5EUno7BfBfsERsg/viewform?embedded=true">
-                                </script>-->
+                                </script>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
